--- a/style.css
+++ b/style.css
@@ -1,3 +1,155 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
+
+body {
+  font-family: "Ubuntu", sans-serif;
+  width: 100%;
+  font-size: 80%;
+  background-color: #ffc404;
+}
+form {
+  margin: 1rem 0.5rem 0.5rem 0;
+  flex: auto;
+  flex-direction: column;
+  word-wrap: normal;
+}
+.wrapper {
+  background-color: #f7f7f7;
+  padding: 1rem;
+  margin: auto;
+  max-width: 70%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  overflow-wrap: normal;
+  align-items: center;
+  border-radius: 0.2rem;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+input {
+  display: flex;
+  width: 80%;
+  margin: 1rem auto;
+  background-color: inherit;
+  padding: 0.2rem;
+  border: none;
+  border-bottom: 1px solid #757575;
+}
+
+input:focus {
+  outline: none;
+}
+
+label {
+  color: #999;
+  display: flex;
+  flex: 1 100%;
+  font-weight: normal;
+  pointer-events: none;
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all;
+}
+
+input:focus ~ label,
+input:valid ~ label {
+  top: -20px;
+  font-size: 1rem;
+}
+
+.add,
+.load,
+.makeGroups {
+  font-family: "Roboto";
+  padding: 0.5rem 2em;
+  margin: 0.5rem;
+  border: 0;
+  outline: 0;
+  color: white;
+  background-color: #2196f3;
+  text-transform: uppercase;
+  border-radius: 0.15em;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  cursor: pointer;
+}
+
 .list {
-  background-color: #e7e7e7;
+  /* pass */
+  margin-top: 2rem;
+  display: flex;
+  padding: 1rem;
+  border: 1px solid #999;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  pointer-events: none;
+}
+
+.student {
+  background-color: aliceblue;
+  border-radius: 0.1rem;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0.5rem;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.student p {
+  align-items: center;
+  padding: 0 1rem 0 1rem;
+}
+
+.name-list {
+  background-color: aliceblue;
+}
+#groups-total {
+  display: flex;
+  margin: 1rem 5rem;
+  padding: 1rem;
+  max-width: 100%;
+  flex-direction: row;
+  justify-items: center;
+  justify-content: space-evenly;
+}
+.number {
+  flex: 1 100%;
+  margin: 0 2rem 0 0;
+  text-align: center;
+}
+.groups-result {
+  flex-direction: row;
+  flex: 1 100%;
+}
+.finalGroup {
+  flex-direction: row;
+  flex: 1 100%;
+}
+
+.grouptitle {
+  color: #2196f3;
+  font-weight: 600;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  bottom: 0;
+  left: 50%;
+  text-align: center;
+  margin-top: 2rem;
+}
+
+@media (max-width: 700px) {
+  body {
+    font-size: 80%;
+  }
+  .wrapper {
+    max-width: 90%;
+  }
+}
+
+@media (max-width: 2000px) {
+  .wrapper {
+    max-width: 70%;
+  }
 }
